--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "lucide-react": "^0.562.0"
     }
 }
