Update welcome page

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "framer-motion": "^12.23.26",
         "lucide-react": "^0.562.0"
     }
 }
